# aoc_2025

./: .gitignore  Cargo.toml  maskfile.md
common/: Cargo.toml
common/src/: lib.rs
day1/: Cargo.toml
day1/benches/: benchmark.rs
day1/src/: lib.rs  main.rs
day2/: Cargo.toml
day2/benches/: benchmark.rs
day2/src/: lib.rs  main.rs
day3/: Cargo.toml
day3/benches/: benchmark.rs
day3/src/: lib.rs  main.rs
